==> Vitech-UA/STM32-Libs/RFM69_STM32_HAL/rfm69.c <==
#include "rfm69.h"
#include "string.h"
#define rfm_spi hspi1
#define RFM69_XO               32000000    ///< Internal clock frequency [Hz]
#define RFM69_FSTEP            61.03515625 ///< Step width of synthesizer [Hz]
#define CSMA_LIMIT              -90 // upper RX signal sensitivity threshold in dBm for carrier sense access
#define RF69_MODE_SLEEP         0 // XTAL OFF
#define RF69_MODE_STANDBY       1 // XTAL ON
#define RF69_MODE_SYNTH         2 // PLL ON
#define RF69_MODE_RX            3 // RX MODE
#define RF69_MODE_TX            4 // TX MODE
#define COURSE_TEMP_COEF    -90 // puts the temperature reading in the ballpark, user can fine tune the returned value
#define RF69_TX_LIMIT_MS   1000
#define RFM69_CTL_SENDACK   0x80
#define RFM69_CTL_REQACK    0x40
#define RF69_CSMA_LIMIT_MS 1000
#define RF69_BROADCAST_ADDR 255

uint8_t read_reg(uint8_t reg) {

	uint8_t regval = 0;
	uint8_t zero_byte = 0;
	uint8_t read_data = reg & 0x7F;

	rfm69_select();
	HAL_SPI_Transmit(&rfm_spi, &read_data, 1, 100);
	HAL_SPI_TransmitReceive(&rfm_spi, (uint8_t*) &zero_byte, (uint8_t*) &regval,
			1, 100);
	rfm69_release();

	return regval;

}

void writeReg(uint8_t reg, uint8_t value) {
	rfm69_select();
	uint8_t write_data = reg | 0x80;
	HAL_SPI_Transmit(&rfm_spi, (uint8_t*) &write_data, 1, 100);
	HAL_SPI_Transmit(&rfm_spi, (uint8_t*) &value, 1, 100);
	rfm69_release();

}

uint32_t getFrequency(void) {
	return RFM69_FSTEP
			* (((uint32_t) read_reg(REG_FRFMSB) << 16)
					+ ((uint16_t) read_reg(REG_FRFMID) << 8)
					+ read_reg(REG_FRFLSB));
}

void setMode(uint8_t newMode, bool waitForReady) {
	if (newMode == _mode)
		return;

	switch (newMode) {
	case RF69_MODE_TX:
		writeReg(REG_OPMODE,
				(read_reg(REG_OPMODE) & 0xE3) | RF_OPMODE_TRANSMITTER);
		if (_isRFM69HW)
			setHighPowerRegs(true);
		break;
	case RF69_MODE_RX:
		writeReg(REG_OPMODE, (read_reg(REG_OPMODE) & 0xE3) | RF_OPMODE_RECEIVER);
		if (_isRFM69HW)
			setHighPowerRegs(false);
		break;
	case RF69_MODE_SYNTH:
		writeReg(REG_OPMODE,
				(read_reg(REG_OPMODE) & 0xE3) | RF_OPMODE_SYNTHESIZER);
		break;
	case RF69_MODE_STANDBY:
		writeReg(REG_OPMODE, (read_reg(REG_OPMODE) & 0xE3) | RF_OPMODE_STANDBY);
		break;
	case RF69_MODE_SLEEP:
		writeReg(REG_OPMODE, (read_reg(REG_OPMODE) & 0xE3) | RF_OPMODE_SLEEP);
		break;
	default:
		return;
	}

	if (waitForReady) {
		while ((read_reg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00)
			; // wait for ModeReady
	}

	_mode = newMode;
}

uint32_t send(uint8_t toAddress, uint8_t *buffer, uint16_t bufferSize,
bool requestACK, bool sendACK) {
	setMode(RF69_MODE_STANDBY, /*waitForReady=*/true); // turn off receiver to prevent reception while filling fifo
	writeReg(REG_DIOMAPPING1, RF_DIOMAPPING1_DIO0_00); // DIO0 is "Packet Sent"

	// control byte
	if (bufferSize > RF69_MAX_DATA_LEN) {
		bufferSize = RF69_MAX_DATA_LEN;
	}

	uint8_t CTLbyte = 0x00;
	if (sendACK) {
		CTLbyte = RFM69_CTL_SENDACK;
	} else if (requestACK) {
		CTLbyte = RFM69_CTL_REQACK;
	}

	uint8_t cmd[6] = { (uint8_t) (REG_FIFO | 0x80), (uint8_t) (bufferSize + 3),
			toAddress, _address, CTLbyte, 0 };

	// write to FIFO
	rfm69_select();
	HAL_SPI_Transmit(&RFM69_SPI_PORT, (uint8_t*) &cmd, 5, HAL_MAX_DELAY);
	HAL_SPI_Transmit(&RFM69_SPI_PORT, buffer, bufferSize, HAL_MAX_DELAY);
	rfm69_release();

	// no need to wait for transmit mode to be ready since its handled by the radio
	setMode(RF69_MODE_TX, true);

	uint32_t txStart = HAL_GetTick();
	while (HAL_GPIO_ReadPin(DIO0_GPIO_Port, DIO0_Pin) == GPIO_PIN_RESET
			&& HAL_GetTick() - txStart < RF69_TX_LIMIT_MS)
		; // Очікую підняття DIO0 що сигналізуватиме про завершення передачі
	setMode(RF69_MODE_STANDBY, /*waitForReady=*/true);
	receiveBegin();

	return (HAL_GetTick() - txStart);
}
