==> JonMackey/FatFsToHex/Varmint Detector/libraries/RFM69/RFM69.cpp <==
#include <RFM69.h>
#include <RFM69registers.h>
#include <tinySPI.h>
#include <avr/interrupt.h>

uint32_t RFM69::getFrequency()
{
  return RF69_FSTEP * (((uint32_t) readReg(REG_FRFMSB) << 16) + ((uint16_t) readReg(REG_FRFMID) << 8) + readReg(REG_FRFLSB));
}

void RFM69::setMode(uint8_t newMode)
{
	if (newMode != _mode)
	{
	#if 1
		uint8_t	reg = readReg(REG_OPMODE) & 0xE3;
		reg |= newMode;	// To reduce code size the RF69_MODEs = RF_OPMODEs
		writeReg(REG_OPMODE, reg);
	#else
		uint8_t	reg = readReg(REG_OPMODE) & 0xE3;
		switch (newMode)
		{
			case RF69_MODE_TX:
				reg |= RF_OPMODE_TRANSMITTER;
			#if IS_RFM69HW
			  if (_isRFM69HW) setHighPowerRegs(true);
			#endif
				break;
			case RF69_MODE_RX:
				reg |= RF_OPMODE_RECEIVER;
			#if IS_RFM69HW
			  if (_isRFM69HW) setHighPowerRegs(false);
			#endif
				break;
			case RF69_MODE_SYNTH:
				reg |= RF_OPMODE_SYNTHESIZER;
				break;
			case RF69_MODE_STANDBY:
				reg |= RF_OPMODE_STANDBY;
			  break;
			case RF69_MODE_SLEEP:
				reg |= RF_OPMODE_SLEEP;
				break;
			default:
				return;
		}
		writeReg(REG_OPMODE, reg);
	#endif

		// we are using packet mode, so this check is not really needed
		// but waiting for mode ready is necessary when going from sleep because the FIFO may not be immediately available from previous mode
		while ((readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00); // wait for ModeReady
		//while (_mode == RF69_MODE_SLEEP && (readReg(REG_IRQFLAGS1) & RF_IRQFLAGS1_MODEREADY) == 0x00); // wait for ModeReady

		_mode = newMode;
	}
}

void RFM69::send(uint8_t toAddress, const void* buffer, uint8_t bufferSize, bool requestACK)
{
  writeReg(REG_PACKETCONFIG2, (readReg(REG_PACKETCONFIG2) & 0xFB) | RF_PACKET2_RXRESTART); // avoid RX deadlocks
  uint32_t now = millis();
  while (!canSend() && millis() - now < RF69_CSMA_LIMIT_MS) receiveDone();
  sendFrame(toAddress, buffer, bufferSize, requestACK, false);
}

uint8_t RFM69::readReg(uint8_t addr)
{
  select();
  SPI.transfer(addr/* & 0x7F*/);
  uint8_t regval = SPI.transfer(0);
  unselect();
  return regval;
}

void RFM69::writeReg(uint8_t addr, uint8_t value)
{
  select();
  SPI.transfer(addr | 0x80);
  SPI.transfer(value);
  unselect();
}
